[tool.poetry]
name = "dnst"
version = "0.1.0"
description = "UPS"
authors = [ "Nobody" ]
packages = [
  {include = "dnst", from = "src"},

]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dep = { git = "git@github.com:art-dsit/dep.git", branch = "gitssh" }
graphrag = { git = "git@github.com:microsoft/graphrag.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

